(install
 (section bin)
 (files
  (bin/tailwindcss-linux-arm64 as tailwindcss))
 (enabled_if
  (and
   (= %{architecture} arm64)
   (= %{system} linux))))

(install
 (section bin)
 (files
  (bin/tailwindcss-linux-x64 as tailwindcss))
 (enabled_if
  (and
   (= %{architecture} amd64)
   (= %{system} linux))))

(install
 (section bin)
 (files
  (bin/tailwindcss-macos-x64 as tailwindcss))
 (enabled_if
  (and
   (= %{architecture} amd64)
   (= %{system} macosx))))

(install
 (section bin)
 (files
  (bin/tailwindcss-macos-arm64 as tailwindcss))
 (enabled_if
  (and
   (= %{architecture} arm64)
   (= %{system} macosx))))

(install
 (section bin)
 (files
  (bin/tailwindcss-windows-arm64.exe as tailwindcss.exe))
 (enabled_if
  (and
   (= %{architecture} arm64)
   (= %{os_type} Win32))))

(install
 (section bin)
 (files
  (bin/tailwindcss-windows-x64.exe as tailwindcss.exe))
 (enabled_if
  (and
   (= %{architecture} amd64)
   (= %{os_type} Win32))))

(rule
 (alias runtest)
 (action
  (run tailwindcss --help)))
